cos382/html_quiz_generator/src/QuizGenParser.java
// Generated from /home/johnluscombe/Documents/COS382/P03_Translator/src/QuizGen.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuizGenParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, DIGIT=6, LETTER=7, CHAR=8, HWS=9, 
		VWS=10;
	public static final int
		RULE_file = 0, RULE_o_block = 1, RULE_more_options = 2, RULE_option = 3, 
		RULE_q_blocks = 4, RULE_q_block = 5, RULE_i_choices = 6, RULE_i_choice = 7, 
		RULE_c_choice = 8, RULE_key = 9, RULE_value = 10, RULE_string = 11;
	public static final String[] ruleNames = {
		"file", "o_block", "more_options", "option", "q_blocks", "q_block", "i_choices", 
		"i_choice", "c_choice", "key", "value", "string"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'(OP)'", "'END'", "'|'", "'='", "'>'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "DIGIT", "LETTER", "CHAR", "HWS", 
		"VWS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QuizGen.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuizGenParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public O_blockContext o_block() {
			return getRuleContext(O_blockContext.class,0);
		}
		public Q_blocksContext q_blocks() {
			return getRuleContext(Q_blocksContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			o_block();
			setState(25);
			q_blocks();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class O_blockContext extends ParserRuleContext {
		public More_optionsContext more_options() {
			return getRuleContext(More_optionsContext.class,0);
		}
		public List<TerminalNode> VWS() { return getTokens(QuizGenParser.VWS); }
		public TerminalNode VWS(int i) {
			return getToken(QuizGenParser.VWS, i);
		}
		public O_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_o_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterO_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitO_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitO_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final O_blockContext o_block() throws RecognitionException {
		O_blockContext _localctx = new O_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_o_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(27);
				match(T__0);
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(28);
					match(VWS);
					}
					}
					setState(31); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VWS );
				setState(33);
				more_options();
				setState(34);
				match(T__1);
				setState(36); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(35);
					match(VWS);
					}
					}
					setState(38); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VWS );
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class More_optionsContext extends ParserRuleContext {
		public OptionContext option() {
			return getRuleContext(OptionContext.class,0);
		}
		public List<TerminalNode> VWS() { return getTokens(QuizGenParser.VWS); }
		public TerminalNode VWS(int i) {
			return getToken(QuizGenParser.VWS, i);
		}
		public More_optionsContext more_options() {
			return getRuleContext(More_optionsContext.class,0);
		}
		public More_optionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_more_options; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterMore_options(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitMore_options(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitMore_options(this);
			else return visitor.visitChildren(this);
		}
	}

	public final More_optionsContext more_options() throws RecognitionException {
		More_optionsContext _localctx = new More_optionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_more_options);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			option();
			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43);
				match(VWS);
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VWS );
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(48);
				more_options();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public List<TerminalNode> HWS() { return getTokens(QuizGenParser.HWS); }
		public TerminalNode HWS(int i) {
			return getToken(QuizGenParser.HWS, i);
		}
		public OptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_option; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionContext option() throws RecognitionException {
		OptionContext _localctx = new OptionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_option);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__2);
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HWS) {
				{
				{
				setState(52);
				match(HWS);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			key();
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==HWS) {
				{
				{
				setState(59);
				match(HWS);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(T__3);
			setState(69);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(66);
					match(HWS);
					}
					} 
				}
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(72);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Q_blocksContext extends ParserRuleContext {
		public Q_blockContext q_block() {
			return getRuleContext(Q_blockContext.class,0);
		}
		public Q_blocksContext q_blocks() {
			return getRuleContext(Q_blocksContext.class,0);
		}
		public Q_blocksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_q_blocks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterQ_blocks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitQ_blocks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitQ_blocks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Q_blocksContext q_blocks() throws RecognitionException {
		Q_blocksContext _localctx = new Q_blocksContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_q_blocks);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			q_block();
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << LETTER) | (1L << CHAR) | (1L << HWS))) != 0)) {
				{
				setState(75);
				q_blocks();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Q_blockContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public List<I_choicesContext> i_choices() {
			return getRuleContexts(I_choicesContext.class);
		}
		public I_choicesContext i_choices(int i) {
			return getRuleContext(I_choicesContext.class,i);
		}
		public C_choiceContext c_choice() {
			return getRuleContext(C_choiceContext.class,0);
		}
		public List<TerminalNode> VWS() { return getTokens(QuizGenParser.VWS); }
		public TerminalNode VWS(int i) {
			return getToken(QuizGenParser.VWS, i);
		}
		public Q_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_q_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterQ_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitQ_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitQ_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Q_blockContext q_block() throws RecognitionException {
		Q_blockContext _localctx = new Q_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_q_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			string();
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				match(VWS);
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VWS );
			setState(84);
			i_choices();
			setState(85);
			c_choice();
			setState(86);
			i_choices();
			setState(87);
			match(T__1);
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(88);
				match(VWS);
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VWS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class I_choicesContext extends ParserRuleContext {
		public I_choiceContext i_choice() {
			return getRuleContext(I_choiceContext.class,0);
		}
		public I_choicesContext i_choices() {
			return getRuleContext(I_choicesContext.class,0);
		}
		public I_choicesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_i_choices; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterI_choices(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitI_choices(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitI_choices(this);
			else return visitor.visitChildren(this);
		}
	}

	public final I_choicesContext i_choices() throws RecognitionException {
		I_choicesContext _localctx = new I_choicesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_i_choices);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(93);
				i_choice();
				setState(94);
				i_choices();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class I_choiceContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public List<TerminalNode> VWS() { return getTokens(QuizGenParser.VWS); }
		public TerminalNode VWS(int i) {
			return getToken(QuizGenParser.VWS, i);
		}
		public I_choiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_i_choice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterI_choice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitI_choice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitI_choice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final I_choiceContext i_choice() throws RecognitionException {
		I_choiceContext _localctx = new I_choiceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_i_choice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__2);
			setState(99);
			string();
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				match(VWS);
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VWS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class C_choiceContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public List<TerminalNode> VWS() { return getTokens(QuizGenParser.VWS); }
		public TerminalNode VWS(int i) {
			return getToken(QuizGenParser.VWS, i);
		}
		public C_choiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_choice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterC_choice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitC_choice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitC_choice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_choiceContext c_choice() throws RecognitionException {
		C_choiceContext _localctx = new C_choiceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_c_choice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__4);
			setState(106);
			string();
			setState(108); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(107);
				match(VWS);
				}
				}
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==VWS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(QuizGenParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(QuizGenParser.LETTER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(QuizGenParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(QuizGenParser.DIGIT, i);
		}
		public List<TerminalNode> CHAR() { return getTokens(QuizGenParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(QuizGenParser.CHAR, i);
		}
		public KeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitKey(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitKey(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KeyContext key() throws RecognitionException {
		KeyContext _localctx = new KeyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_key);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(LETTER);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << LETTER) | (1L << CHAR))) != 0)) {
				{
				{
				setState(113);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << LETTER) | (1L << CHAR))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(QuizGenParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(QuizGenParser.LETTER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(QuizGenParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(QuizGenParser.DIGIT, i);
		}
		public List<TerminalNode> HWS() { return getTokens(QuizGenParser.HWS); }
		public TerminalNode HWS(int i) {
			return getToken(QuizGenParser.HWS, i);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(119);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << LETTER) | (1L << HWS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << LETTER) | (1L << HWS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(QuizGenParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(QuizGenParser.DIGIT, i);
		}
		public List<TerminalNode> LETTER() { return getTokens(QuizGenParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(QuizGenParser.LETTER, i);
		}
		public List<TerminalNode> CHAR() { return getTokens(QuizGenParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(QuizGenParser.CHAR, i);
		}
		public List<TerminalNode> HWS() { return getTokens(QuizGenParser.HWS); }
		public TerminalNode HWS(int i) {
			return getToken(QuizGenParser.HWS, i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuizGenListener ) ((QuizGenListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuizGenVisitor ) return ((QuizGenVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(124);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << LETTER) | (1L << CHAR) | (1L << HWS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << LETTER) | (1L << CHAR) | (1L << HWS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}